<resources>
    <string name="app_name">WAT??</string>
    <string name="title_activity_home_tabbed">HomeTabbedActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title">What Are Those??</string>
    <string name="email_address_text">Email Address</string>
    <string name="password_text">Password</string>
    <string name="sign_in_text">Sign In</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_text">What Are Those?? %1$d</string>
    <string name="wat_icon">wat_icon</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_page_tabbed">WAT??</string>
    <string name="fragment_home_list_view">WAT??</string>
</resources>
