<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sampleapp.apps.codelife.sampleapp.MainActivity">

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="246dp"
        android:layout_height="56dp"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/email_address_text"
        android:inputType="textEmailAddress"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintVertical_bias="0.425"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <EditText
        android:id="@+id/PasswordEditText"
        android:layout_width="247dp"
        android:layout_height="54dp"
        android:layout_marginTop="46dp"
        android:ems="10"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_editor_absoluteX="83dp" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="184dp"
        android:layout_height="92dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.634"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.203"
        tools:text="@string/title" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="157dp"
        android:layout_height="48dp"
        android:layout_marginTop="62dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/sign_in_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PasswordEditText"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="77dp"
        android:layout_height="93dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/wat_icon"
        app:layout_constraintBottom_toBottomOf="@+id/titleTextView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/titleTextView"
        app:srcCompat="@mipmap/ic_shoe"
        tools:layout_editor_absoluteY="104dp" />

</android.support.constraint.ConstraintLayout>
